--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <script defer src="scripts/main.js"></script>
   </head>
   <body>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
       <a class="navbar-brand" href="#">The Ultimate Blog!</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -24,10 +24,10 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item">
-            <a class="nav-link" href="#">Home</a>
+            <button id="home" class="btn btn-primary my-2 my-sm-0" type="submit">Home</button>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Create New Post</a>
+            <button id="new-post" class="btn btn-primary my-2 my-sm-0" type="submit">Create New Post</button>
           </li>
         </ul>
       </div>
