Add new/update post form template.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <!-- Local Styles & Scripts -->
     <link rel="stylesheet" href="styles/main.css">
     <script defer src="scripts/main.js"></script>
+    <script src="scripts/form-template.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
