--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
     <link rel="stylesheet" href="styles/main.css">
     <script defer src="scripts/main.js"></script>
     <script src="scripts/form-template.js"></script>
+    <script src="scripts/post-delete.js"></script>
+    <script src="scripts/post-edit.js"></script>
+    <script src="scripts/post-new.js"></script>
+    <script src="scripts/post-view.js"></script>
+    <script src="scripts/posts-index.js"></script>
   </head>
   <body>
     <nav class="navbar navbar-expand-sm navbar-dark bg-primary">
